edit search phone

--- a/css/app.css
+++ b/css/app.css
@@ -177,7 +177,7 @@ sup {
 }
 
 a {
-  color: #3fb079;
+  color: #000;
   text-decoration: none;
   background-color: transparent;
 }
@@ -15810,7 +15810,7 @@ sup {
 }
 
 a {
-  color: #3fb079;
+  color: #000;
   text-decoration: none;
   background-color: transparent;
 }
