--- a/css/app.css
+++ b/css/app.css
@@ -11261,7 +11261,7 @@ body,
 
 @media (max-width: 991.98px) {
   .sidebar-open #sidebar-overlay {
-    display: block;
+    display: none;
   }
 }
 
@@ -14967,7 +14967,7 @@ label:not(.form-check-label, .custom-file-label) {
 .select2-container--default .select2-selection--single,
 .select2-selection .select2-selection--single {
   border: 1px solid #d2d6de;
-  padding: 6px 12px;
+  padding: 3px 10px;
   height: 34px;
 }
 
@@ -15707,7 +15707,7 @@ section {
 body {
   margin: 0;
   font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   font-weight: 400;
   line-height: 1.25;
   color: #212529;
@@ -17617,9 +17617,9 @@ pre code {
 .form-control {
   display: block;
   width: 100%;
-  height: calc(1.5rem + 1px);
-  padding: 0.275rem 0.5rem;
-  font-size: 0.85rem;
+  height: calc(1.5rem + 2px);
+  padding: 0.1rem 0.5rem;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.25;
   color: #495057;
@@ -18172,7 +18172,7 @@ textarea.form-control.is-invalid {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.275rem 0.75rem;
+  padding: 0.25rem 0.75rem;
   font-size: 0.85rem;
   line-height: 1.25;
   border-radius: 0.25rem;
@@ -23950,7 +23950,7 @@ button.bg-dark:focus {
 
 .mr-2,
 .mx-2 {
-  margin-right: 0.5rem !important;
+  margin-right: 0.15rem !important;
 }
 
 .mb-2,
