--- a/css/thanh.css
+++ b/css/thanh.css
@@ -1,6 +1,6 @@
 
 .title{
-	font-size: 24px;
+	font-size: 20px;
 }
 textarea{
 	resize: none;
@@ -28,6 +28,7 @@ table td, table th {
 
 .bg-danger {
     background-color: #3fb079!important;
+    border-radius: 0.25rem;
 }
 
 .btn-danger {
@@ -54,7 +55,7 @@ select {
     background: none!important;
     border: none!important;
     border-radius: 4px;
-    height: 21px!important;
+    height: 16px!important;
 }
 /*.select2-container--default .select2-selection--single .select2-selection__rendered{
     line-height: 37px!important;
